logs/my315ok.portlet.rollitems.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/my315ok'...
Listing './lib/python3.5/site-packages/my315ok/portlet'...
Listing './lib/python3.5/site-packages/my315ok/portlet/rollitems'...
Listing './lib/python3.5/site-packages/my315ok/portlet/rollitems/browser'...
Listing './lib/python3.5/site-packages/my315ok/portlet/rollitems/browser/images'...
Listing './lib/python3.5/site-packages/my315ok/portlet/rollitems/browser/jss'...
Listing './lib/python3.5/site-packages/my315ok/portlet/rollitems/browser/stylesheets'...
Listing './lib/python3.5/site-packages/my315ok/portlet/rollitems/locales'...
Listing './lib/python3.5/site-packages/my315ok/portlet/rollitems/locales/zh'...
Listing './lib/python3.5/site-packages/my315ok/portlet/rollitems/locales/zh/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/my315ok/portlet/rollitems/profiles'...
Listing './lib/python3.5/site-packages/my315ok/portlet/rollitems/profiles/default'...
Compiling './lib/python3.5/site-packages/my315ok/portlet/rollitems/rollportlet.py'...
***   File "./lib/python3.5/site-packages/my315ok/portlet/rollitems/rollportlet.py", line 258
    except AttributeError, IndexError:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/my315ok/portlet/rollitems/tests'...
Listing './lib/python3.5/site-packages/my315ok.portlet.rollitems-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
